fix long-read on iphone and contact page on iphone

--- a/source/styles-mobile/components/portfolio/mobile.scss
+++ b/source/styles-mobile/components/portfolio/mobile.scss
@@ -66,13 +66,6 @@
                     font-size: px(24);
                     text-transform: uppercase;
                 }
-    
-                &--audi {
-    
-                    img {
-                        object-position: px(-160) 0;
-                    }
-                }
             }
         }
     
