--- a/source/styles-mobile/services/templates/services-second-level/services-second-level/mobile.scss
+++ b/source/styles-mobile/services/templates/services-second-level/services-second-level/mobile.scss
@@ -48,7 +48,7 @@
                 z-index: 2;
                 width: 100%;
                 height: px(110);
-                background: linear-gradient(0deg, $white 0%, $white 20%, rgba(255, 255, 255, .8) 70%, transparent 100%);
+                background: linear-gradient(0deg, $white 0%, $white 20%, rgba(255, 255, 255, .8) 70%, rgba(255, 255, 255, 0) 100%);
                 content: '';
             }
 
@@ -202,8 +202,6 @@
                 }
             }
 
-            
-
             span {
 
                 .bold {
@@ -215,7 +213,6 @@
                 }
             }
                 
-
             .text-title {
                 font-family: $Roboto-Black;
                 font-size: px(36);
