--- a/source/styles-mobile/templates/index/index/mediaQueries/phoneLandscape.scss
+++ b/source/styles-mobile/templates/index/index/mediaQueries/phoneLandscape.scss
@@ -57,13 +57,6 @@
 
                 &__item {
                     padding: px(170) px(60) 0;
-
-                    &--audi {
-    
-                        img {
-                            object-position: initial;
-                        }
-                    }
                 }
             }
         }
